<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.sunday.viewmodel.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_coin_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/coin_name"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".20" />

            <TextView
                android:id="@+id/tv_upbit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upbit_name"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_coin_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".20" />

            <TextView
                android:id="@+id/tv_bithumb_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bithumb_name"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_upbit_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".20" />

            <TextView
                android:id="@+id/tv_coinone_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/coinone_name"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_bithumb_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".20" />


            <TextView
                android:id="@+id/tv_low_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exchange"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_coinone_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".20" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_menu"
            app:setData="@{vm.tickerList}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
