<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.sunday.viewmodel.ExchangeViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_menu_exchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_coin_idx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/idx"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".25" />

            <TextView
                android:id="@+id/tv_exchange_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exchange_name"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_coin_idx"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".25" />

            <TextView
                android:id="@+id/tv_now_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/now_price"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_exchange_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".25" />

            <TextView
                android:id="@+id/tv_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_now_price"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".25" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_exchange"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_menu_exchange"
            app:setETicker="@{vm.tickerList}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
